# whisper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: whisper-ci.yaml  whisper-cli-release.yaml  whisper-release.yaml
adapters/aes-gcm-crypto/: Cargo.toml
adapters/aes-gcm-crypto/src/: lib.rs
adapters/postgresql-adapter/: Cargo.toml
adapters/postgresql-adapter/migrations/: 0001_init.sql  0002_managed_secrets.sql  0003_client_encrypted.sql  down.sql
adapters/postgresql-adapter/src/: lib.rs  managed_secrets_repository.rs  migrations.rs  shared_secrets_repository.rs
adapters/postgresql-adapter/src/models/: managed_secret.rs  mod.rs  shared_secret.rs
applications/axum/server/: Cargo.toml  README.md
applications/axum/server/assets/: copySecret.js  create_secret.js  reveal_secret.js  script.js
applications/axum/server/assets/css/: base.css  components.css  forms.css  main.css  modern.css  pages.css
applications/axum/server/src/: aes_key.rs  app_state.rs  error.rs  lib.rs  logger.rs  main.rs  options.rs  postgresql.rs  source.rs
applications/axum/server/src/analytics/: composite.rs  ga4.rs  mixpanel.rs  mod.rs
applications/axum/server/src/html_templates/: docs.rs  get_secret.rs  index.rs  integrations.rs  legal.rs  mod.rs  seo.rs
applications/axum/server/src/router/: mod.rs
applications/axum/server/src/router/managed_secret_api/: auth.rs  delete_secret.rs  get_secret.rs  mod.rs  upsert_secret.rs
applications/axum/server/src/router/secret_api/: create_ephemeral.rs  create_secret.rs  get_secret_by_id.rs  mod.rs
applications/axum/server/src/router/slack/: duration.rs  mod.rs  signature.rs  whisper_command.rs
applications/axum/server/src/router/views/: get_secret.rs  index.rs  mod.rs  static_pages.rs
applications/axum/server/templates/: docs_secrets.html  get_secret.html  index.html  integrations.html  layout.html  privacy.html  terms.html
applications/axum/server/tests/: api.rs
applications/cli/: Cargo.toml
applications/cli/src/: client.rs  clipboard.rs  config.rs  crypto.rs  env_whisper.rs  error.rs  lib.rs  main.rs  session.rs  telemetry.rs  ui.rs
applications/cli/src/commands/: completions.rs  get.rs  import.rs  init.rs  invite.rs  join.rs  mod.rs  pull.rs  push.rs  remove.rs  rotate.rs  share.rs  status.rs
applications/cli/tests/: cli.rs
applications/discord/: .env.example  .gitignore  biome.json  deploy-commands.ts  index.ts  package.json
deploy/: whisper-discord-bot.service  whisper.service
docs/: architecture.md
npm/: package.json.tmpl  platform-README.md
npm/whisper-secrets/: README.md  package.json
services-core/: Cargo.toml
services-core/src/: lib.rs
services-core/src/commands/: mod.rs
services-core/src/commands/managed_secret/: delete_managed_secret.rs  get_managed_secret.rs  mod.rs  test_utils.rs  upsert_managed_secret.rs
services-core/src/commands/shared_secret/: create_client_encrypted_secret.rs  create_secret.rs  delete_expired_secrets.rs  get_secret_by_id.rs  mod.rs  test_utils.rs
services-core/src/contracts/repositories/: managed_secret_repository.rs  mod.rs  shared_secret_repository.rs
services-core/src/entities/: managed_secret.rs  shared_secret.rs
services-core/src/services/: mod.rs  secret_encryption.rs
services-core/src/values_object/shared_secret/: mod.rs  secret_encrypted.rs  secret_expiration.rs  secret_id.rs
services-core/tests/: cucumber.rs
services-core/tests/features/managed_secret/: delete_managed_secret.feature  get_managed_secret.feature  upsert_managed_secret.feature
services-core/tests/features/shared_secret/: create_secret.feature  delete_expired_secrets.feature  get_secret.feature
services-core/tests/steps/: managed_secret_steps.rs  mod.rs  shared_secret_steps.rs
