[workspace]
resolver = "2"
members = [
    # Core (business logic)
    "services-core",

    # Axum
    "applications/axum/server",

    # CLI
    "applications/cli",

    #Adapters
    "adapters/postgresql-adapter",
    "adapters/aes-gcm-crypto"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/quentinved/Whisper"

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
chrono = "0.4.44"
sha2 = "0.10"
aes-gcm = "0.10.3"
whisper-core = { path = "services-core" }
whisper-postgresql = { path = "adapters/postgresql-adapter" }
aes-gcm-crypto = { path = "adapters/aes-gcm-crypto" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
] }
rstest = "0.26.1"

# Random
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Error
thiserror = "2.0.18"

# Shared across crates
clap = { version = "4.5.13", features = ["derive", "env"] }
reqwest = { version = "0.13.2", features = ["json"] }
base64-url = "3.0.0"
url = { version = "2", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12"
subtle = "2.6"

# CLI-only
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
rand = "0.9"
tempfile = "3"

# Server-only
axum = { version = "0.7.5", features = ["macros"] }
tokio-cron-scheduler = "0.13.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tower-http = { version = "0.6.1", features = ["set-header"] }
rust-embed = { version = "8", features = ["mime-guess"] }
