[package]
name = "whisper-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[features]
test-utils = []

[dependencies]
chrono = { workspace = true}
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
required-features = ["test-utils"]
