[package]
name = "whisper-postgresql"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

whisper-core = { workspace = true }
