[package]
name = "whisper-secrets"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[lib]
name = "whisper_secrets"
path = "src/lib.rs"

[[bin]]
name = "whisper-secrets"
path = "src/main.rs"

[dependencies]
aes-gcm-crypto = { workspace = true }
whisper-core = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, features = ["json", "form"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64-url = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { workspace = true }
rand = { workspace = true }
whisper-server = { path = "../axum/server" }
whisper-postgresql = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
