[package]
name = "whisper-server"
version = "1.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
whisper-core = { workspace = true }
whisper-postgresql = { workspace = true }
aes-gcm-crypto = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tokio-cron-scheduler = { workspace = true }
askama_axum = { workspace = true }
askama = { workspace = true }
base64-url = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
